--- a/src/layout.less
+++ b/src/layout.less
@@ -11,9 +11,11 @@
 
 .video-player {
 
+    background-color: #000;
     display: inline-block;
     position: relative;
     line-height: 0;
+    overflow: hidden;
 
     .load-spinner {
 
