--- a/src/layout.less
+++ b/src/layout.less
@@ -56,26 +56,20 @@
         display: inline-block;
     }
 
-    input[type="range"] {
-        -webkit-appearance: none;
-        outline: none;
-        border: none;
-        margin: 0;
-
+    .volume-control {
         background-color: #FFF;
         border-radius: 2px;
         width: 50px;
         height: 5px;
-
+        position: relative;
     }
 
-    input[type="range"]::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        cursor: default;
+    .volume-handle {
         background-color: #999;
         height: 5px;
         width: 10px;
-        -webkit-box-shadow: inset 0 -1px 1px black;
+        position: absolute;
+        top: 0;
     }
 
 
