--- a/src/style.less
+++ b/src/style.less
@@ -82,13 +82,13 @@
     }
 
     .mute-control,
-    .volume-control,
+    .volume-bar,
     .fullscreen-control {
         float: right;
         margin: 0 10px;
     }
 
-    .volume-control {
+    .volume-bar {
         margin-top: 4px;
     }
 
