--- a/src/layout.less
+++ b/src/layout.less
@@ -56,7 +56,7 @@
         display: inline-block;
     }
 
-    .volume-control {
+    .volume-bar {
         background-color: #FFF;
         border-radius: 2px;
         width: 50px;
