--- a/src/style/buttonControl.styl
+++ b/src/style/buttonControl.styl
@@ -4,7 +4,7 @@
         border-right: 1px solid rgba(0,0,0,0.5);
         cursor: pointer;
         display: inline-block;
-        padding: 12px 16px;
+        padding: rem(12) rem(16);
         vertical-align: top;
         box-shadow: 1px 0 0 rgba(76,76,76,0.5);
 
