--- a/src/style/timeControl.styl
+++ b/src/style/timeControl.styl
@@ -2,7 +2,7 @@
     .time-control {
         color: #6D6D6D;
         display: inline-block;
-        padding: 17px 18px;
+        padding: rem(17) rem(18);
         vertical-align: top;
     }
     .current-time {
