--- a/src/style.styl
+++ b/src/style.styl
@@ -19,7 +19,7 @@ $control-bar-height = 54px;
     position: relative;
     font-size: 13px;
 
-    width: 650px;
+    width: 100%;
     height: 416px;
     padding-bottom: $control-bar-height;
 
@@ -28,6 +28,7 @@ $control-bar-height = 54px;
 
     video {
         width: 100%;
+        height: 100%;
     }
 
     .control-bar {
@@ -61,4 +62,15 @@ $control-bar-height = 54px;
         height: auto;
     }
 
+}
+
++below(600px) {
+
+    .logo-control {
+        display: none;
+    }
+
+    .title-control {
+        display: none;
+    }
 }
