--- a/src/style/progressBar.styl
+++ b/src/style/progressBar.styl
@@ -1,16 +1,21 @@
 
 .video-player {
 
+    .progress-panel {
+        position: absolute;
+        top: rem(-10);
+        left: 0;
+        width: 100%;
+        padding: rem(10) 0;
+    }
+
     .progress-bar {
         border-bottom: 1px solid #242424;
         background-image: linear-gradient(to #4E4E4E, #585858);
         width: 100%;
         height: 6px;
         box-shadow: 0 1px 0 #434343, inset 0 1px 4px rgba(0,0,0,0.3);
-
-        position: absolute;
-        top: 0;
-        left: 0;
+        position: relative;
     }
     .load-progress {
         background-color: rgba(0,0,0,0.2);
