--- a/src/style.styl
+++ b/src/style.styl
@@ -20,6 +20,7 @@ $control-bar-height = 54px;
     font-size: 13px;
 
     width: 100%;
+    height: 416px;
     padding-bottom: $control-bar-height;
 
     display: flex;
