--- a/src/layout.styl
+++ b/src/layout.styl
@@ -7,7 +7,7 @@
 
     background-color: #000;
     display: inline-block;
-    position: relative; d
+    position: relative;
     overflow: hidden;
 
     .load-progress,
