--- a/src/layout.styl
+++ b/src/layout.styl
@@ -20,7 +20,8 @@
         width: 0;
     }
 
-    .seek-handle {
+    .seek-handle,
+    .video-poster {
         position: absolute;
         left: 0;
         top: 0;
