--- a/src/style.styl
+++ b/src/style.styl
@@ -1,5 +1,6 @@
 
 @import "layout.styl";
+@import "./style/video.styl";
 @import "./style/controlBar.styl";
 @import "./style/progressBar.styl";
 @import "./style/buttonControl.styl";
@@ -23,14 +24,6 @@ $control-bar-height = 54px;
     height: 416px;
     padding-bottom: $control-bar-height;
 
-    display: flex;
-    align-items: center;
-
-    video {
-        width: 100%;
-        height: 100%;
-    }
-
     .control-bar {
         position: absolute;
         bottom: 0;
@@ -43,13 +36,6 @@ $control-bar-height = 54px;
     .fullscreen-control,
     .logo-control {
         float: right;
-    }
-
-    .load-icon {
-        background: url(load.gif) no-repeat;
-        display: block;
-        width: 100px;
-        height: 100px;
     }
 
     &.fullscreen {
