--- a/src/style/controlBar.styl
+++ b/src/style/controlBar.styl
@@ -3,5 +3,6 @@
         background-image: linear-gradient(to #303030, #212121);
         padding-top: 6px;
         position: relative;
+        z-index: 10;
     }
 }
